# 2DFFT

./: CMakeLists.txt  CMakeLists_Merlin.txt  build2DFFT.sh  readme.txt
GUI/: 2DFFT_GUI.pro  mainwindow.cpp  mainwindow.hpp  mainwindow.ui
build-2DFFT_GUI-Desktop-Debug/: moc_mainwindow.cpp  ui_mainwindow.h
include/: convolution.hpp  filter.hpp  filter_container.hpp  filter_loader.hpp  filter_statistic.hpp  frequency_convolution.hpp  run.hpp  spatial_convolution.hpp
src/: .main.cpp.swo  .main.cpp.swp  filter_container.cpp  filter_loader.cpp  frequency_convolution.cpp  main.cpp  run.cpp  spatial_convolution.cpp
tests/: filters0.txt  run.txt  run0.txt
